syntax = "proto3";
package cmd;
option go_package = "cmd/vesselpb";

import "google/protobuf/timestamp.proto";

message Vessel {
    int32 id = 1;
    string name= 2;
    string owner_id = 3;
    string naccs_code=4;
}

message Voyage {
    int32 id = 1;
    int32 vessel_id = 2;
    string departure_location = 3;
    string arrival_location = 4;
    google.protobuf.Timestamp departure_time = 5;
    google.protobuf.Timestamp arrival_time = 6;
    string details = 7;
}

/*
Vessel related messages
*/
message CreateVesselRequest {
    Vessel vessel = 1;
}

message CreateVesselResponse {
    int32 id = 1;
}

message GetVesselRequest {
    int32 id = 1;
}

message GetVesselResponse {
    Vessel vessel = 1;
}

message UpdateVesselRequest {
    Vessel vessel = 1;
}

message UpdateVesselResponse {
    Vessel vessel = 1;
}

message DeleteVesselRequest {
    int32 id = 1;
}

message DeleteVesselResponse {
    int32 result = 1;
}

message GetVesselsRequest {
}

message GetVesselsResponse {
    repeated Vessel vessels = 1;
}

/*
Voyage related messages
*/

message CreateVoyageRequest {
    Voyage voyage = 1;
}

message CreateVoyageResponse {
    int32 id = 1;
}

message GetVoyageRequest {
    int32 voyage_id = 1;
    int32 vessel_id=2;
}

message GetVoyageResponse {
    Voyage voyage = 1;
}

message UpdateVoyageRequest {
    Voyage voyage = 1;
}

message UpdateVoyageResponse {
    Voyage voyage = 1;
}

service VesselService {
    rpc CreateVessel(CreateVesselRequest) returns (CreateVesselResponse) {}
    rpc GetVessels(GetVesselsRequest) returns (GetVesselsResponse) {}
    rpc GetVessel(GetVesselRequest) returns (GetVesselResponse) {}
    rpc UpdateVessel(UpdateVesselRequest)returns(UpdateVesselResponse){}
    rpc CreateVoyage(CreateVoyageRequest) returns (CreateVoyageResponse) {}
    rpc GetVoyage(GetVoyageRequest) returns (GetVoyageResponse) {}
    rpc UpdateVoyage(UpdateVoyageRequest)returns(UpdateVoyageResponse){}
}
